Fix bug with table display at full width
In class schedule, there was an issue with the table overlapping the
dateline when the browser was at full width. This commit fixes that.

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,6 @@ table.table1{
 .show_schedule {
 	width: 90%;
 	height: 400px;
-	margin-top: -5%;
 	margin-left: 5%;
 }
 
